test/libsolidity/syntaxTests/metaTypes/typeNotRegularIdentifierFunction.sol
contract Test {
    function type() public pure {
    }
}
// ----
// ParserError 2314: (29-33='type'): Expected identifier but got 'type'
